--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,2 +1,8 @@
 /* Your styles go here */
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+.jumbotron{
+    background: url(https://media.istockphoto.com/photos/arches-national-park-picture-id467703976?b=1&k=20&m=467703976&s=170667a&w=0&h=GmJK5b_klLUu6NKLfDtw911TkxCPMRR0sZ59bF4ZRX8=);
+    background-position: 0 -500px;
+    background-size: cover;
+}
